ENH: Add TRMM_KERNEL bindings

--- a/driver/level3/meson.build
+++ b/driver/level3/meson.build
@@ -450,8 +450,8 @@ endforeach
 # Create the static libraries from the configurations
 _kern_libs = []
 foreach conf : kernel_confs
-    message(conf['name'])
-    message(conf)
+    # message(conf['name'])
+    # message(conf)
     _kern_libs += [static_library(
         conf['name'],
         conf['src'],
